fix color shifting order

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,9 @@
 .hamburger-wrapper {
 	position: relative;
 	height: 15px;
+	width: 24px;
 	z-index: 99;
+	cursor: pointer;
 	outline: none !important;
 
   &.active {
